# ESP32-DevKit-v1-Practices

./: README.md
active-buzzer/: Cargo.toml
active-buzzer/src/: lib.rs  p_buzzer.rs
buzzer-morse/: Cargo.toml
buzzer-morse-signals/: Cargo.toml  memory.x
c3-test/: Cargo.toml
c3-test/.vercel/: project.json
c3-wifi/: Cargo.toml  wokwi.toml
dht11-project/: Cargo.toml  wokwi.toml
dht11-test/: Cargo.toml
esp-blink/: Cargo.toml
esp-blink/.cargo/: config.toml
esp-blink/src/: 1.rs  3_alter_light.rs  main.rs  press.rs
i2c-hello/: Cargo.toml  wokwi.toml
jump-game/: Cargo.toml  wokwi.toml
jump-game/src/: lib.rs
jump-game/src/sprites/: resources.rs
ldr/: Cargo.toml
led-fader/: Cargo.toml
led-fader/tests/: hello_test.rs
measure/: Cargo.toml
measure-temperature/: Cargo.toml
music-buzzer/: Cargo.toml
music-buzzer/src/: music.rs  pink_panther.rs
my-esp-project/: Cargo.toml
oled-image/: Cargo.toml
oled-mbp/: Cargo.toml  wokwi.toml
oled-raw-img/: Cargo.toml  wokwi.toml
pir-sensor/: Cargo.toml
pir-sensor-alarm/: Cargo.toml
potentiometer/: Cargo.toml
practice-c3/: Cargo.toml
practice-several-things/: Cargo.toml
random-light/: Cargo.toml  diagram.json  wokwi.toml
random-light/src/: ledc.rs  lib.rs
scraper/: Cargo.toml
temperature-measure/: Cargo.toml
temperature-measure/.cargo/: config.toml
thermistor-room-temperature/: Cargo.toml
ultrasonic-sensor/: Cargo.toml  wokwi.toml
wifi-ap/: Cargo.toml
wifi-ap/src/: led.rs  lib.rs  wifi.rs
wifi-async-https/: .env  Cargo.toml  wokwi.toml
wifi-control/: Cargo.toml
wifi-control/src/: index.html  web.rs  wifi.rs
wifi-station/: Cargo.toml
wifi-station/src/: lib.rs  wifi_setup.rs
wifi-webserver/: Cargo.toml
wifi-webserver-base/: Cargo.toml
wifi-webserver-base/src/: index.html  web.rs  wifi.rs
wifi-webserver/src/: wifi.rs
