[package]
edition = "2021"
name    = "measure"
version = "0.1.0"

[[bin]]
name = "measure"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32",
  "log-04",
] }
log = "0.4.27"
esp32-dht11-rs = "0.1.3"
embedded-hal = "1.0.0"

critical-section = "1.2.0"
esp-println      = { version = "0.15.0", features = ["esp32", "log-04"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

